--- a/package.json
+++ b/package.json
@@ -31,5 +31,13 @@
     "nodemon": "^1.19.1",
     "prettier": "^1.17.1",
     "pretty-quick": "^1.10.0"
+  },
+  "dependencies": {
+    "bluebird": "^3.5.5",
+    "bootstrap": "^4.3.1",
+    "canvas": "^2.5.0",
+    "chart.js": "^2.8.0",
+    "react-bootstrap": "^1.0.0-beta.9",
+    "react-chartjs-2": "^2.7.6"
   }
 }
