--- a/Client/package.json
+++ b/Client/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.3.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-autosuggest": "^9.4.3",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
