--- a/Client/package.json
+++ b/Client/package.json
@@ -8,6 +8,7 @@
     "react-bootstrap": "^1.0.0-beta.9",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
+    "react-fullscreen-loading": "0.0.4",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1"
   },
