--- a/Server/package.json
+++ b/Server/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.2.6",
     "mongoose": "^5.5.9",
     "validator": "^10.11.0"
   }
